{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 138,
  "lineage": "ae3879a0-0822-7f02-2718-346f3f188b01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:679309468658:instance/i-00ca971b6c486f7d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role",
            "id": "i-00ca971b6c486f7d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "priya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a985a6ef20fe157",
            "private_dns": "ip-10-45-1-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.45.1.5",
            "public_dns": "ec2-54-236-38-238.compute-1.amazonaws.com",
            "public_ip": "54.236.38.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071603f531dddd9b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd1f4a7529d45478",
            "tags": {
              "Name": "devops-server"
            },
            "tags_all": {
              "Name": "devops-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0af5a5425e5eb1e"
            ]
          },
          "dependencies": [
            "aws_security_group.testsg",
            "aws_subnet.testpublic1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:internet-gateway/igw-0e355c0d5e2c642ed",
            "id": "igw-0e355c0d5e2c642ed",
            "owner_id": "679309468658",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-0fd4cf7063a0b48ea"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:route-table/rtb-05510195945e9d492",
            "id": "rtb-05510195945e9d492",
            "owner_id": "679309468658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e355c0d5e2c642ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-rt"
            },
            "tags_all": {
              "Name": "devops-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4cf7063a0b48ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092fafa69ea55ce3d",
            "route_table_id": "rtb-05510195945e9d492",
            "subnet_id": "subnet-0dd1f4a7529d45478"
          },
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.testrt",
            "aws_subnet.testpublic1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff55dd74e34dccd6",
            "route_table_id": "rtb-05510195945e9d492",
            "subnet_id": "subnet-0f1c94312396c560e"
          },
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.testrt",
            "aws_subnet.testpublic2",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fbae25abeee6561",
            "route_table_id": "rtb-05510195945e9d492",
            "subnet_id": "subnet-0432b7a29e7a6f090"
          },
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.testrt",
            "aws_subnet.testpublic3",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:security-group/sg-0e0af5a5425e5eb1e",
            "description": "allow inbound and outbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0af5a5425e5eb1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "devops",
            "name_prefix": "",
            "owner_id": "679309468658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-security"
            },
            "tags_all": {
              "Name": "devops-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4cf7063a0b48ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testpublic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-0dd1f4a7529d45478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.45.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd1f4a7529d45478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-publicsubnet1"
            },
            "tags_all": {
              "Name": "devops-publicsubnet1"
            },
            "vpc_id": "vpc-0fd4cf7063a0b48ea"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testpublic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-0f1c94312396c560e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.45.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1c94312396c560e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-publicsubnet2"
            },
            "tags_all": {
              "Name": "devops-publicsubnet2"
            },
            "vpc_id": "vpc-0fd4cf7063a0b48ea"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testpublic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-0432b7a29e7a6f090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.45.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0432b7a29e7a6f090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-publicsubnet3"
            },
            "tags_all": {
              "Name": "devops-publicsubnet3"
            },
            "vpc_id": "vpc-0fd4cf7063a0b48ea"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:vpc/vpc-0fd4cf7063a0b48ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.45.0.0/16",
            "default_network_acl_id": "acl-0f38bc6b9a8bd7471",
            "default_route_table_id": "rtb-0001bbe032c7408f2",
            "default_security_group_id": "sg-06fc46a8dd3e2f6e1",
            "dhcp_options_id": "dopt-03d16827be5e7d9c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd4cf7063a0b48ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0001bbe032c7408f2",
            "owner_id": "679309468658",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            }
          }
        }
      ]
    }
  ]
}